# gran

./: .gitignore  Cargo.toml  README.md  notes.txt
examples/: acid.rs  kids.rs  multi.rs  vintage.rs
src/: effects.rs  lib.rs  main.rs  oscillator.rs  oscillators.rs  player.rs  sample.rs  sound.rs  sounds.rs  state.rs
src/oscillator/: input.rs  lfo.rs
src/oscillators/: lfo.rs
src/sample/: input.rs
